2011-10-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines: Remove ALEPHHELP.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Add distclean-local to remove kpathsea/ and w2c/.

2011-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines: Remove ETEXHELP, LUATEXHELP, PDFTEXHELP.
	Add UPBIBTEXHELP, UPDVITYPEHELP, UPPLTOTFHELP, and UPTFTOPLHELP.
	* convert: Add upBibTeX, upDVItype, upPLtoTF, and upTFtoPL.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert, splitup.c: Add upTeX and e-upTeX.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* common.defines: Define ucharcast().

2011-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert, splitup.c: Add e-pTeX.
	* splitup.c: #define onlyTeX in texd.h.

2010-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reorganize web2c headers.
	* native/kpathsea/c-auto.in (deleted): Moved ...
	* c-auto.in (new): ... to here.
	* configure.ac: Create kpathsea/c-auto.h instead of
	native/kpathsea/c-auto.h.
	* Makefile.am: Create w2c/config.h instead of native/config.h.
	Adjust INCLUDES, BUILT_SOURCES, DISTCLEANFILES, rules, and
	dependencies.
	* fixwrites.c, splitup.c, web2c.h: #include <w2c/config.h>
	instead of "config.h".

2010-04-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Make sure native/config.h exists before
	compiling web2c, fixwrites, or splitup.

2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fixwrites.c (main): Recognize 'conststringcast...' as string.

	* Makefile.am (INCLUDES): Remove '-I$(srcdir)/..'.
	(native/config.h): Adapted.

2010-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* coerce.h: Remove luaTeX specific code.
	* convert: Reorganize (common code for TeX and MF).

2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert, splitup.c: Remove luatex.
	* common.defines: Remove LUATANGLEHELP.
	Add PBIBTEXHELP, PDVITYPEHELP, PPLTOTFHELP, and PTFTOPLHELP.
